# serdapt

./: Cargo.toml  README.md
src/: add_ref.rs  array.rs  bytes.rs  cell.rs  codec.rs  convert.rs  cow.rs  fold.rs  from.rs  human.rs  identity.rs  into.rs  lib.rs  map.rs  map_as_seq.rs  mutex.rs  option.rs  ptr.rs  range.rs  result.rs  reverse.rs  rwlock.rs  seq_as_map.rs  sequence.rs  str.rs  try_from.rs  try_into.rs  wrapping.rs
