[package]
name = "serdapt"
version = "0.1.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2021"
description = "Composable adapters for `#[serde(with = ...)]` attribute"
license = "0BSD"
homepage = "https://github.com/stephaneyfx/serdapt"
repository = "https://github.com/stephaneyfx/serdapt.git"
documentation = "https://docs.rs/serdapt"
keywords = ["adapter", "custom", "serde", "with"]

[features]
alloc = ["serde/alloc"]
default = ["std"]
std = ["alloc", "serde/std"]

[dependencies]
serde = { version = "1.0.208", default-features = false }

[dev-dependencies]
bincode = "1.3.3"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
